--- a/turingcomplete.live/style.css
+++ b/turingcomplete.live/style.css
@@ -1,5 +1,5 @@
 .pad {
-  padding: 25px;
+  padding: 2rem;
 }
 
 .light thead.sticky-top {
@@ -14,6 +14,14 @@
   margin-top: 15px;
 }
 
-.btn > i.bi {
-  font-size: 1.5rem;
+#btn_refresh {
+  display: flex;
+  align-items:  center;
+}
+
+.btn .bi {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  margin: 0.5rem;
 }
